--- a/Task 9/assets/index.html
+++ b/Task 9/assets/index.html
@@ -16,13 +16,13 @@
             <video class="vid w-100" autoplay muted src="vids/Coming Soon - Theme Preview - Start Bootstrap.mp4">
             </video>
         </div>
-        <div class="text position-absolute bottom-0 top-0" >
+        <div class="text position-absolute bottom-0 top-0 " >
         </div>
         <article class="text_container position-absolute text-white d-flex flex-column">
-            <h1 class="pb-2">Our Website is<br>Coming Soon</h1>
-            <p>We're working hard to finish the development of<br> this site. Sign up below to receive updates and<br> to be notified when we launch!</p>
+            <h1 class="pb-2">Our Website is<br class="break"> Coming Soon</h1>
+            <p>We're working hard to finish the development of<br class="break"> this site. Sign up below to receive updates and<br> to be notified when we launch!</p>
             <div class="text_container_bottom mt-4">
-                <input class="p-3 pe-5 rounded-3" type="email" placeholder="Enter email address...">
+                <input class="mail p-3 pe-5 rounded-3" type="email" placeholder="Enter email address...">
                 <button class="btn text-muted ms-4 p-3">NOTIFY ME!</button>
             </div>
         </article>
